--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -48,4 +48,9 @@ suites:
   attributes:
     zeromq:
       dir: /opt/zeromq
-
+- name: v2
+  run_list:
+    - recipe[zeromq]
+  attributes:
+    zeromq:
+      version: 2.2.0
