--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,28 +7,13 @@ driver_config:
     memory: 256
     cpus: 2
 platforms:
-- name: debian-7.2.0
-  driver_config:
-    box: opscode-debian-7.2.0
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
+- name: debian-8.4
   run_list:
   - recipe[apt]
-- name: ubuntu-12.04
-  driver_config:
-    box: opscode-ubuntu-12.04
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
+- name: ubuntu-14.04
   run_list:
   - recipe[apt]
-- name: ubuntu-10.04
-  driver_config:
-    box: opscode-ubuntu-10.04
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-10.04_chef-provisionerless.box
-  run_list:
-  - recipe[apt]
-- name: centos-6.5
-  driver_config:
-    box: opscode-centos-6.5
-    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
+- name: centos-7.2
 suites:
 - name: source_v41
   run_list:
@@ -57,4 +42,4 @@ suites:
   attributes:
     zeromq:
       install_method: package
-  excludes: ["centos-6.5", "debian-6.0.8", "ubuntu-10.04"]
+  excludes: ["centos-7.2"]
