--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 ---
+sudo: required
+services:
+  - docker
 language: ruby
 gemfile:
 - test/support/Gemfile
 rvm:
 - 2.1.5
-script: bundle exec rake foodcritic
+script:
+- bundle exec rake foodcritic
+- bundle exec rake kitchen:all
